[gd_scene load_steps=2 format=3 uid="uid://t4nf3kbnefro"]

[ext_resource type="Script" uid="uid://h6n53b0g7l2w" path="res://scenes/components/hitreceiver.gd" id="1_hnytm"]

[node name="HitReceiver" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hnytm")

[node name="AccumulateTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AccumulateTimer" to="." method="_on_acc_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
