[gd_scene load_steps=10 format=3 uid="uid://cvnyqsmi0gf48"]

[ext_resource type="Script" uid="uid://dwpngvhoqs5ur" path="res://scenes/viruses/shooting_folder.gd" id="1_6yne1"]
[ext_resource type="Texture2D" uid="uid://8cacotysk2xk" path="res://assets/sprites/viruses/shootingFolderTab1.png" id="1_oxonf"]
[ext_resource type="Texture2D" uid="uid://bobs1kruc5als" path="res://assets/sprites/viruses/shootingFolderTab2.png" id="2_k7mjw"]
[ext_resource type="Script" uid="uid://h6n53b0g7l2w" path="res://scenes/components/hitreceiver.gd" id="3_k7mjw"]
[ext_resource type="Script" uid="uid://bvhufuu6pxphs" path="res://scenes/components/health.gd" id="4_lmhbx"]
[ext_resource type="PackedScene" uid="uid://c5d8dl62djdjy" path="res://scenes/components/HealthBar.tscn" id="5_6ib00"]
[ext_resource type="Script" uid="uid://rjqg6hvr6pib" path="res://scenes/components/hit_sender.gd" id="6_wj6cf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmhbx"]
size = Vector2(24, 30)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj6cf"]
resource_local_to_scene = true
bg_color = Color(0, 1, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[node name="ShootingFolder" type="CharacterBody2D"]
script = ExtResource("1_6yne1")

[node name="tab1" type="Sprite2D" parent="."]
texture = ExtResource("1_oxonf")

[node name="tab2" type="Sprite2D" parent="."]
position = Vector2(1.5, 3)
texture = ExtResource("2_k7mjw")

[node name="HitReceiver" type="Area2D" parent="." node_paths=PackedStringArray("health")]
position = Vector2(-11, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_k7mjw")
health = NodePath("../Health")
metadata/_custom_type_script = "uid://h6n53b0g7l2w"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitReceiver"]
position = Vector2(11, 0)
shape = SubResource("RectangleShape2D_lmhbx")

[node name="HitSender" type="Area2D" parent="."]
script = ExtResource("6_wj6cf")
mode = 1
delete_parent_at_hit = false
metadata/_custom_type_script = "uid://rjqg6hvr6pib"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitSender"]
shape = SubResource("RectangleShape2D_lmhbx")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_lmhbx")
max_health = 4.0
metadata/_custom_type_script = "uid://bvhufuu6pxphs"

[node name="HealthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("5_6ib00")]
offset_left = -13.0
offset_top = 23.0
offset_right = 14.0
offset_bottom = 26.0
theme_override_styles/fill = SubResource("StyleBoxFlat_wj6cf")
health = NodePath("../Health")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
